--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -186,6 +186,7 @@
                 
                 <p class="menu-item-text">RSS</p>
         </a>
+        <a id="theme-toggle" onclick="modeSwitcher()"></a>
     </div>
     {%- if site.preferences.search.enabled -%}
     <div class="searchbar search-container">
@@ -205,6 +206,7 @@
     </div>
     <script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script>
     <script src="/assets/js/Search.js"></script>
+    <script src="/scripts/mode-switcher.js"></script>
     {%- endif -%}
     {%- if page.permalink != "/" -%}
     
