add script to footer

--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -28,6 +28,9 @@
 *
 {%- endcomment -%}
 
+<script src="/scripts/mode-switcher.js"></script>
+
+
 {%- if site.copyright.msg != nil and site.copyright.msg != empty and site.copyright.msg != null -%}
 <div id="copyright">
     <p id="copyright-notice">© {{site.copyright.msg}}. {{site.copyright.year}} Hi!</p>
