add <a> to main page

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -62,6 +62,8 @@
     <div class="container">                    
         <div class = "box">
             {%- include Header.html -%}
+	    <a href="{{page.url}}" id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;"></a>
+
             {%- include Feed.html -%}
 
             {%- if page.content-type == "notes" 
