--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -62,7 +62,7 @@
     <div class="container">                    
         <div class = "box">
             {%- include Header.html -%}
-	    <a href="{{page.url}}" id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;"></a>
+	    <a href="{{page.url}}" id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;">light mode</a>
 
             {%- include Feed.html -%}
 
