Add script to post

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -87,5 +87,7 @@
     </div>
     <!-- Load KaTeX -->
 	{%- include ContextMenu.html -%}
+<script src="/scripts/mode-switcher.js"></script>
+
 </body>
 </html>
