Typo fix on script

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -87,7 +87,7 @@
     </div>
     <!-- Load KaTeX -->
 	{%- include ContextMenu.html -%}
-<script src="/scripts/mode-switcher.js"></script>
+<script src="/scripts/theme-switcher.js"></script>
 
 </body>
 </html>
