--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -3,6 +3,7 @@ layout: Stylesheet
 ---
 
 @import "/assets/css/highlight.css";
+@import "/assets/css/theme.css";
 /* Containers: Body, Container, Box, Main, Header, Content */
 
 
