comment out the extra button

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -62,7 +62,7 @@
     <div class="container">                    
         <div class = "box">
             {%- include Header.html -%}
-	    <button href="{{page.url}}" id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;"></button>
+	    <!--<button href="{{page.url}}" id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;"></button>-->
 
             {%- include Feed.html -%}
 
