--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -28,7 +28,7 @@
 *
 {%- endcomment -%}
 
-<script src="/scripts/mode-switcher.js"></script>
+<script src="/scripts/theme-switcher.js"></script>
 
 
 {%- if site.copyright.msg != nil and site.copyright.msg != empty and site.copyright.msg != null -%}
