--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -50,7 +50,7 @@
     <link rel="icon" href="/assets/img/favicon.png" type="image/png" sizes="16x16"/>
     <link href="/assets/css/Style.css" rel="stylesheet" media="all" class="default" />
     <link href="/assets/css/Util.css" rel="stylesheet" media="all" class="default" />
-	<link href="/assets/css/vendor/Katex.css" rel="stylesheet" media="all" class="default"/>
+	<!--<link href="/assets/css/vendor/Katex.css" rel="stylesheet" media="all" class="default"/>-->
     <!--[if IE]>
         <link href="/assets/css/ie-target.css" rel="stylesheet" type="text/css"/>
     <![endif]-->
@@ -87,7 +87,7 @@
     </div>
     <!-- Load KaTeX -->
 	{%- include ContextMenu.html -%}
-<script src="/scripts/theme-switcher.js"></script>
+<!--<script src="/scripts/theme-switcher.js"></script>-->
 
 </body>
 </html>
