--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -207,7 +207,7 @@
     </div>
     <script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script>
     <script src="/assets/js/Search.js"></script>
-    <script src="/scripts/mode-switcher.js"></script>
+    <script src="/scripts/theme-switcher.js"></script>
     {%- endif -%}
     {%- if page.permalink != "/" -%}
     
