--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -188,7 +188,7 @@
         </a>
         
     </div>
-    <a id="theme-toggle" onclick="modeSwitcher()"></a>
+    <button id="theme-toggle" onclick="modeSwitcher()"></button>
     {%- if site.preferences.search.enabled -%}
     <div class="searchbar search-container">
         {%- if site.preferences.search.shortcut_hint.enabled -%}
