--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -6,6 +6,21 @@ layout: Stylesheet
 /*@import "/assets/css/theme.css"; leaving out for now, will tinker w/color switcher later...*/
 /* Containers: Body, Container, Box, Main, Header, Content */
 
+@font-face {
+   font-family: 'pitch sans';
+   src: url('../fonts/pitch-sans-regular.woff2') format('woff2');
+   font-weight: 400;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'pitch sans';
+   src: url('../fonts/PitchSansWeb-Medium.woff2') format('woff2');
+   font-weight: 500;
+   font-style: normal;
+   font-display: swap;
+}
 
 @font-face {
    font-family: 'Heldane';
