--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -23,6 +23,38 @@ layout: Stylesheet
 }
 
 @font-face {
+   font-family: 'pitch sans';
+   src: url('../fonts/PitchSans-Bold.woff2') format('woff2');
+   font-weight: 700;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'untitled';
+   src: url('../fonts/UntitledSansWeb-Medium.woff2') format('woff2');
+   font-weight: 500;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'untitled';
+   src: url('../fonts/UntitledSansWeb-Bold.woff2') format('woff2');
+   font-weight: 700;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'Copernicus';
+   src: url('../fonts/GalaxieCopernicus-Book.woff2') format('woff2');
+   font-weight: 400;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
    font-family: 'Heldane';
    src: url('../fonts/heldane-display-regular.woff2') format('woff2');
    font-weight: 400;
