--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -612,7 +612,8 @@ p, li {
 
 p b,
 p strong, li strong {
-	font-weight: 500
+	font-weight: 500;
+	FONT-FAMILY: var(--font-family-serif);
 }
 
 p em,
@@ -766,13 +767,13 @@ cite a {
 
  ol>li::before {
 	position: absolute;
-	top: 0;
-	left: 0;
-	font-family: var(--font-family-sans), system-ui, sans-serif;
-	font-size: 1.4;
-	font-weight: 300;
-	content: counter(counter);
-	counter-increment: counter
+    top: -0.01em;
+    left: 0;
+    font-family: var(--font-family-serif),system-ui,sans-serif;
+    font-size: 1.4;
+    font-weight: 300;
+    content: counter(counter);
+    counter-increment: counter;
 }
 
  ol li::before {
@@ -1137,7 +1138,7 @@ cite a {
 }
 
  figcaption {
-	font-family: Academica;
+	font-family: var(--font-family-mono);
 	font-size: 13px;
 	line-height: 1.4;
 	font-weight: 300;
@@ -1272,8 +1273,9 @@ summary {
 
 .site-heading-ltr a {
     text-decoration: none;
-        font-weight: var(--font-weight-semibold);
-            font-size: 1rem;
+    font-weight: var(--font-weight-bold);
+    font-size: 1rem;
+    font-family: 'pitch sans'
 }
 
 
@@ -1409,6 +1411,7 @@ summary {
 
 .menu-item-text:hover {
     color: var(--c-text-link);
+    font-weight: bold;
 }
 
 .stale-link {
@@ -1452,7 +1455,7 @@ summary {
 
 #theme-toggle {
     height: 35px;
-    width: 90px;
+    width: 100px;
     position: absolute;
     top: 58px;
     right: 20px;
@@ -1463,8 +1466,7 @@ summary {
     justify-content: center;
     padding: 8px;
     z-index: 90;
-    font-family: var(--font-family-serif);
-    font-style: italic;
+    font-family: var(--font-family-mono);
     color: var(--c-text);
     cursor: pointer;
 }
@@ -1857,14 +1859,13 @@ a.button-block {
 .searchbar input[type="text"] {
     position: relative;
     padding-left: 50px;
-    box-sizing : border-box;
+    box-sizing: border-box;
     width: 100%;
     height: 40px;
     border: 0px;
-    font-family: var(--secondary-font-family) !important;
+    font-family: var(--font-family-mono) !important;
     color: var(--c-text);
     font-size: var(--font-size-medium);
-    /*border-bottom: 1px solid var(--green);*/
     background-color: var(--c-card-bg-light);
     margin-top: 1em;
     padding: 0 1.25em;
@@ -2236,7 +2237,7 @@ a.button-block {
     border-radius: 0;
     height: auto;
     vertical-align: middle;
-    font-family: var(--font-family-mono);
+    font-family: var(--font-family-serif);
     font-weight: normal !important;
     font-size: var(--font-size-small);
     margin-right: 7px;
@@ -2270,7 +2271,7 @@ a.button-block {
     border-radius: 0;
     height: auto;
     vertical-align: middle;
-    font-family: var(--font-family-mono);
+    font-family: var(--font-family-serif);
     font-weight: normal !important;
     font-size: var(--font-size-small);
     margin: 0;
@@ -2297,7 +2298,7 @@ a.button-block {
 .mn-right {
     float: right;
     clear: right;
-    font-family:  var(--primary-font-family) !important;
+    font-family: var(--font-family-mono) !important;
     font-size: 14px;
     margin-right: -45%;
     width: 40%;
@@ -2312,7 +2313,7 @@ a.button-block {
 .mn-left {
     float: left;
     clear: left;
-    font-family:  var(--secondary-font-family) !important;
+    font-family:  var(--font-family-mono) !important;
     font-size: 14px;
     margin-left: -45%;
     width: 40%;
