--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -55,6 +55,14 @@ layout: Stylesheet
 }
 
 @font-face {
+   font-family: 'Copernicus';
+   src: url('../fonts/GalaxieCopernicus-BookItalic.woff2') format('woff2');
+   font-weight: 400;
+   font-style: italic;
+   font-display: swap;
+}
+
+@font-face {
    font-family: 'Heldane';
    src: url('../fonts/heldane-display-regular.woff2') format('woff2');
    font-weight: 400;
@@ -802,7 +810,8 @@ cite a {
 
  blockquote {
 	padding-top: 18px;
-	padding-bottom: 18px
+	padding-bottom: 18px;
+	
 }
 
 @media(min-width: 600px) {
@@ -833,6 +842,7 @@ cite a {
 	border-left: 5px solid var(--c-border-light);
 	color: var(--c-text-muted);
 	padding-left: 1em
+	font-style: italic;
 }
 
  blockquote cite {
