--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -32,6 +32,14 @@ layout: Stylesheet
 
 @font-face {
    font-family: 'untitled';
+   src: url('../fonts/untitled-sans-web-regular.woff2') format('woff2');
+   font-weight: 400;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'untitled';
    src: url('../fonts/UntitledSansWeb-Medium.woff2') format('woff2');
    font-weight: 500;
    font-style: normal;
@@ -271,9 +279,9 @@ html[data-theme="dark"] {
   --line-height-snug: 1.375;
 
   /* Font family */
-  --font-family-serif: 'untitled', serif;
+  --font-family-serif: 'untitled', 'Univers', 'Helvetica', '-apple-system', 'BlinkMacSystemFont', sans-serif;
   --font-family-mono: 'pitch sans', 'SFMono-Regular', 'Menlo', monospace;
-  --font-family-sans: 'Copernicus', 'Univers', 'Helvetica', '-apple-system', 'BlinkMacSystemFont', sans-serif;
+  --font-family-sans: 'Copernicus', serif; 
 
   --font-family-base: var(--font-family-sans);
 
@@ -1284,9 +1292,9 @@ summary {
 
 .site-heading-ltr a {
     text-decoration: none;
-    font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-base);
     font-size: 1rem;
-    font-family: 'pitch sans'
+    font-family: var(--font-family-serif);
 }
 
 
@@ -1416,7 +1424,7 @@ summary {
     margin-left: auto;
     font-weight: 400;
     font-size: var(--font-size-small);
-    font-family: var(--font-family-mono);
+    font-family: var(--font-family-serif);
     color: var(--c-text-muted);
 }
 
@@ -1477,9 +1485,10 @@ summary {
     justify-content: center;
     padding: 8px;
     z-index: 90;
-    font-family: var(--font-family-mono);
+    font-family: var(--font-family-serif);
     color: var(--c-text);
     cursor: pointer;
+    font-weight: 400;
 }
 
 .button,
@@ -1874,7 +1883,7 @@ a.button-block {
     width: 100%;
     height: 40px;
     border: 0px;
-    font-family: var(--font-family-mono) !important;
+    font-family: var(--font-family-serif) !important;
     color: var(--c-text);
     font-size: var(--font-size-medium);
     background-color: var(--c-card-bg-light);
@@ -1885,7 +1894,7 @@ a.button-block {
 ::placeholder {
     color: var(--c-text-muted);
     font-size: 1rem;
-    font-family:  var(--secondary-font-family) !important;
+    font-family:  var(--font-family-serif) !important;
 }
 .search-icon {
     position: absolute;
