--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -60,6 +60,7 @@ layout: Stylesheet
    font-weight: 400;
    font-style: normal;
    font-display: swap;
+   font-size: -0.01em;
 }
 
 @font-face {
@@ -68,6 +69,7 @@ layout: Stylesheet
    font-weight: 400;
    font-style: italic;
    font-display: swap;
+   font-size: -0.01em;
 }
 
 @font-face {
@@ -1293,7 +1295,7 @@ summary {
 .site-heading-ltr a {
     text-decoration: none;
     font-weight: var(--font-weight-semibold);
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-family: var(--font-family-serif);
 }
 
