--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -30,8 +30,8 @@
 <html lang="en">
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Knowledge Continuum" property="og:site_name"/>
-    <meta content="A non-linear thread of important ideas weaved together to explore and understand the fabric of knowledge." property="og:description">
+    <meta content="Jonathan's Spiritual Growth Lab" property="og:site_name"/>
+    <meta content="A non-linear thread of important ideas weaved together to explore and understand spiritual development." property="og:description">
     <meta content="{{ site.url }}/about/" property="article:author">
 
     {%- if page.title -%}
