--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -12,7 +12,7 @@
         {%- if tag == 'Favorite' -%}
         <li><a href="/favorites/" class="tag">#{{ tag }}</a></li>
         {%- else -%}
-        <li><a href="/tags/#{{ tag }}" class="tag">This is a {{ tag }}</a></li>
+        <li><a href="/tags/#{{ tag }}" class="tag">This is a {{page.categories | capitalize | join: ', '}} about {{ tag }}</a></li>
         {%- endif -%}
     {%- endfor -%}
 </ul>
