--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -919,7 +919,7 @@ cite a {
 	margin-bottom: 18px;
 	margin-top: 18px;
 	margin-bottom: 18px;
-	font-family: Theinhardt, system-ui, sans-serif;
+	font-family: var(--font-family-serif), system-ui, sans-serif;
 	font-size: 16px;
 	line-height: 1.2;
 	font-weight: 400;
@@ -1437,7 +1437,7 @@ summary {
 }
 
 .stale-link {
-    background-color:#ffffc4;
+    background-color:red;
 }
 
 
@@ -2310,9 +2310,9 @@ a.button-block {
 }
 
 .content a {
-    color: var(--anchor-text-color);
-    text-decoration: none;
-    background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);
+    color: var(--c-text-link);
+    text-decoration: underline;
+    /*background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);*/
     font-weight: var(--font-weight-semibold);
 }
 
