--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -69,8 +69,18 @@ layout: Stylesheet
    font-weight: 400;
    font-style: italic;
    font-display: swap;
-   
 }
+
+
+@font-face {
+   font-family: 'Copernicus';
+   src: url('../fonts/BradfordLLWeb-Book (1).woff2') format('woff2');
+   font-weight: 400;
+   font-style: normal;
+   font-display: swap;
+}
+
+
 /* 
 
 @font-face {
