--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -73,7 +73,7 @@ layout: Stylesheet
 
 
 @font-face {
-   font-family: 'Copernicus';
+   font-family: 'Bradford';
    src: url('../fonts/BradfordLLWeb-Book (1).woff2') format('woff2');
    font-weight: 400;
    font-style: normal;
