@font-face bradford light

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -73,6 +73,14 @@ layout: Stylesheet
 
 @font-face {
    font-family: 'Bradford';
+   src: url('../fonts/BradfordLL-Light (1).otf') format('opentype');
+   font-weight: 300;
+   font-style: normal;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'Bradford';
    src: url('../fonts/BradfordLLWeb-Regular.woff2') format('woff2');
    font-weight: 400;
    font-style: normal;
